# mmc

./: README
src/: .gitignore  CL.pm  CL.xs  CMD.pm  Char.h  Conf.pm  DCommand.pm  DLWin32.pm  Ex.pm  Keymap.pm  LE.pm  MUD.pm  Main.pm  Makefile.am  Makefile.in  Makefile.win32  Parser.pm  README  RStream.pm  Status.pm  Ticker.pm  UAPI.pm  acconfig.h  b2c.c  cmalloc.c  cmalloc.h  config.h.in  config_h.win32  configure  configure.in  main.c  misc.c  misc.h  missing  mmc.rc  moddep.pl  output.c  output.h  packmod.pl  resource.h  (+9 more)
